Try to fix ugly top and bottom of choices on iPhone

--- a/app/assets/stylesheets/poll.scss
+++ b/app/assets/stylesheets/poll.scss
@@ -7,6 +7,8 @@ td, th {
     padding: 10px;
 }
 
-.two-columns {
-   column-count: 2
+div.two-columns {
+    column-count: 2;
+    padding-top: 2mm;
+    padding-bottom: 2mm;
 }
